# twenty_questions_interp

./: .env.example  .gitignore  README.md  STATUS.md  pyproject.toml
data/: README.md  animals.yaml  answers.csv  questions.yaml
docs/: DECISIONS.md  PLAN.md
docs/progress/: M0-bootstrap.md  M1-data-artifacts.md  M2-ready-smoke-test.md  M3-12b-pilot-readouts-detail.md  M3-12b-pilot-readouts.md  M3-12b-selfchosen-direct-detail.md  M3-12b-selfchosen-direct.md  M3-12b-selfchosen-diversity-T07.md  M3-12b-selfchosen-lessobv-detail.md  M3-12b-selfchosen-lessobv.md  M3-12b-selfchosen-transfer-20bank-slice.md  M3-12b-selfchosen-transfer.md  M3-12b-selfchosen-turn4scale-detail.md  M3-12b-selfchosen-turn4scale.md  M3-12b-selfchosen-turns-detail.md  M3-12b-selfchosen-turns.md  M3-3cond-binding-smoke.md  M3-4b-smoke-diagnostics.md  M3-4cond-binding-smoke.md  M3-binding-bank-audit.md  M3-h-persistence.md  M3-selfchosen-20bank.md  M3-selfchosen-ready-T07.md  M3-selfchosen-ready-smoke.md  M4-comparative-prompt-and-scale.md  M4-flip-yesno-lens.md  (+6 more)
scripts/: analyze_positional_lens.py  capture_positional_residuals.py  decode_ready.py  decode_turns.py  diagnose_index_binding.py  diagnose_persistence.py  diagnose_selfchosen_ready.py  flip_yesno_text.py  patch_turn4.py  probe_positional_anchors.py  rescore_binding_results.py  run_calibration.py  run_selfchosen_smoke.py  validate_answers.py
tests/: test_banks.py  test_binding_audit.py  test_decode_turns.py  test_diagnose_selfchosen_ready.py  test_dialogue.py  test_feasible_set.py  test_permutations.py  test_readouts.py  test_smoke.py
(+8 files in other folders)
