[project]
name = "twenty-q-interp"
version = "0.0.1"
description = "Mechanistic interpretability of a 20-Questions-style game with LLMs."
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "nnsight>=0.3",
    "sae-lens>=5.0",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "pydantic>=2.8",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twenty_q"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
